# libclang_example

./: README.md  pyproject.toml  requirements.txt
resources/: header.h
src/libclang_example/: main.py
